--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/login.js", "use": "@vercel/node" }
+    { "src": "src/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/login.js" }
+    { "src": "/(.*)", "dest": "src/server.js" }
   ]
 }
