--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.6.2",
     "path": "^0.12.7"
