--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -10,12 +11,17 @@
   },
   "name": "html",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon src/server.js - e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
