--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "name": "html",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon src/server.js - e js,hbs",
+    "dev": "nodemon server.js - e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
