--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://yashwanthlumia535:RmHxmjwSTJLWTSzH@expense-tracker.0zgzssh.mongodb.net/?retryWrites=true&w=majority&appName=expense-tracker
 PORT=3000;
+SESSION_SECRET= '6i0fKs6swK'
