--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.16",
     "path": "^0.12.7"
   },
   "name": "html",
