--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URI=mongodb+srv://yashwanthlumia535:RmHxmjwSTJLWTSzH@expense-tracker.0zgzssh.mongodb.net/?retryWrites=true&w=majority&appName=expense-tracker
 PORT=3000;
-SESSION_SECRET= '6i0fKs6swK'
+SESSION_SECRET= 6i0fKs6swK
+user=verify.moneymind@gmail.com
+pass=bxje idtg heav kkdk
