--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
-    "mongoose": "^8.6.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7"
   },
@@ -17,6 +18,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js - e js,hbs",
+    "dev2":"nodemon ./public/views/hbsRunner.js - e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
