--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
@@ -18,7 +21,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js - e js,hbs",
-    "dev2":"nodemon ./public/views/hbsRunner.js - e js,hbs",
+    "dev2": "nodemon ./public/views/hbsRunner.js - e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
